updated index and profile image upload
set image source to progile.jpeg to match image filename

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
       <header>
          <h1 id="name">Student Name</h1>
-         <img src="profile.jpg" alt="Profile Picture" id="profile-img">
+         <img src="profile.jpeg" alt="Profile Picture" id="profile-img">
          <p id="course-year">Course - Year</p>
          <button id="theme-toggle">Switch Theme</button>
       </header>
