--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
          <h2>Achievements/Certifications</h2>
          <ul>
             <li>Achievement 1</li>
+	    <li>•ITS Java Specialist</li>
             <li>Achievement 2</li>
+	    <li>•Internal & External Affairs Head of SPACE DAVAO</li>
             <li>Achievement 3</li>
          </ul>
       </section>
@@ -25,7 +27,9 @@
          <h2>Previous Projects</h2>
          <ul>
             <li>Project 1</li>
+	    <a href='https://github.com/m1yaryu/SakayKa-Admin-Dashboard'><li>SakayKa Admin Dashboard</li></a>
             <li>Project 2</li>
+	    <a href='https://github.com/m1yaryu/KRT-Digitzed-Log-System'><li>KRT Digitized Log System</li></a>
             <li>Project 3</li>
          </ul>
       </section>
