Fixed indented lists in index

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
          <h2>Achievements/Certifications</h2>
          <ul>
             <li>Achievement 1</li>
-	    <li>•ITS Java Specialist</li>
+		<ul>
+		<li>ITS Java Specialist</li>
+		</ul>
             <li>Achievement 2</li>
-	    <li>•Internal & External Affairs Head of SPACE DAVAO</li>
+		<ul>
+		<li>Internal & External Affairs Head of SPACE DAVAO</li>
+		</ul>
             <li>Achievement 3</li>
          </ul>
       </section>
@@ -27,9 +31,13 @@
          <h2>Previous Projects</h2>
          <ul>
             <li>Project 1</li>
-	    <a href='https://github.com/m1yaryu/SakayKa-Admin-Dashboard'><li>SakayKa Admin Dashboard</li></a>
+		<ul>
+		<a href='https://github.com/m1yaryu/SakayKa-Admin-Dashboard'><li>SakayKa Admin Dashboard</li></a>
+		</ul>
             <li>Project 2</li>
-	    <a href='https://github.com/m1yaryu/KRT-Digitzed-Log-System'><li>KRT Digitized Log System</li></a>
+		<ul>
+		<a href='https://github.com/m1yaryu/KRT-Digitzed-Log-System'><li>KRT Digitized Log System</li></a>
+		</ul>
             <li>Project 3</li>
          </ul>
       </section>
