--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <header>
          <h1 id="name">Student Name</h1>
          <img src="profile.jpeg" alt="Profile Picture" id="profile-img">
-         <p id="course-year">Course - Year</p>
+         <p id="course-year">BS Computer Science (IT103) - 2025</p>
          <button id="theme-toggle">Switch Theme</button>
       </header>
       <section id="achievements">
