--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    </head>
    <body>
       <header>
-         <h1 id="name">Student Name</h1>
+         <h1 id="name">RYU HENRY MIYAZAKI (宮﨑 龍)</h1>
          <img src="profile.jpeg" alt="Profile Picture" id="profile-img">
          <p id="course-year">BS Computer Science (IT103) - 2025</p>
          <button id="theme-toggle">Switch Theme</button>
