Added recent project

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 		<ul>
 		<a href='https://github.com/m1yaryu/KRT-Digitzed-Log-System'><li>KRT Digitized Log System</li></a>
 		</ul>
-            <li>Project 3</li>
-         </ul>
+      <a href="https://how-t0-say-no.vercel.app/"><li>How to say no</li></a>
+      </ul>
       </section>
       <script src="script.js"></script>
    </body>
