--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
          <h2>Previous Projects</h2>
          <ul>
             <li>Project 1</li>
-		<ul>
-		<a href='https://github.com/m1yaryu/SakayKa-Admin-Dashboard'><li>SakayKa Admin Dashboard</li></a>
-		</ul>
+		      <ul>
+		         <a href='https://github.com/m1yaryu/SakayKa-Admin-Dashboard'><li>SakayKa Admin Dashboard</li></a>
+		      </ul>
             <li>Project 2</li>
-		<ul>
-		<a href='https://github.com/m1yaryu/KRT-Digitzed-Log-System'><li>KRT Digitized Log System</li></a>
-		</ul>
-      <a href="https://how-t0-say-no.vercel.app/"><li>How to say no</li></a>
-      </ul>
+		      <ul>
+		         <a href='https://github.com/m1yaryu/KRT-Digitzed-Log-System'><li>KRT Digitized Log System</li></a>
+		      </ul>
+            <li>Project 3</li>
+            <ul>
+               <a href="https://how-t0-say-no.vercel.app/"><li>How to say no</li></a>
+            </ul>
       </section>
       <script src="script.js"></script>
    </body>
